Separate ViewProfile sections into partial views

--- a/WebApp/Views/UserProfile/ViewProfile.cshtml
+++ b/WebApp/Views/UserProfile/ViewProfile.cshtml
@@ -60,201 +60,16 @@
             <!-- Content Section -->
             <div class="w-3/4 overflow-auto bg-white p-6">
                 <!-- SECTION: Profile (default) -->
-                <div id="profile-section" class="tab-content">
-                    <div class="flex justify-between">
-                        <h2 class="mb-4 text-2xl font-semibold">Profile</h2>
-                        <div>
-                            <button type="button" id="cancelButton" class="hidden rounded bg-gray-500 px-2 py-2 text-sm font-semibold text-white hover:bg-gray-600"
-                                    onclick="cancelEdit()">
-                                Cancel
-                            </button>
-                            <button type="button" id="saveButton" class="hidden rounded bg-[#7A1515] px-2 py-2 text-sm font-semibold text-white hover:bg-[#A53D3D]"
-                                    onclick="submitChanges()">
-                                Save Changes
-                            </button>
-                            <button type="button" onclick="enableEditMode()" id="editButton"
-                                    class="rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
-                                <i class="fas fa-edit pr-1"></i> Update
-                            </button>
-                        </div>
-                    </div>
-                    <!-- User Details -->
-                    <div class="space-y-2">
-                        <div><strong>Name:</strong><input class="ml-2 disabled:bg-white" value="@fullname" disabled/></div>
-                        <div><strong>Email:</strong><input class="ml-2 disabled:bg-white" value="@email" disabled/></div>
-                        @if(isApplicant)
-                        {
-                            <div><strong>Address:</strong><input class="ml-2 disabled:bg-white" value="@Model.Applicant.Address" disabled/></div>
-                        }
-                    </div>
-                    <hr />
-                    <!-- Applicant/Recruiter Details -->
-                    <div class="space-y-2">
-                        <div class="mb-4 space-y-0">
-                            @if(isRecruiter)
-                            {
-                                <div class="text-lg font-bold text-gray-600">Company Profile</div>
-                                <div class="text-xs font-medium text-gray-500">To update company details, go to company tab</div>
-                            }
-                            else
-                            {
-                                <div class="text-lg font-bold text-gray-600">Educational Profile</div>
-                                <div class="text-xs font-medium text-gray-500">Contact <span class="font-semibold">nlo@gradsync.org</span> to request an update on your educational profile.</div>
-                            }
-                        </div>
-                        <!-- Recruiter Details -->
-                        @if (isRecruiter)
-                        {
-                            var company = Model.Recruiter.Company;
-                            <div><strong>Name:</strong><input class="ml-2 disabled:bg-white" value="@company.Name" disabled/></div>
-                            <div><strong>Address:</strong><input class="ml-2 disabled:bg-white" value="@company.Address" disabled/></div>
-                            <div><strong>Email:</strong><input class="ml-2 disabled:bg-white" value="@company.ContactEmail" disabled/></div>
-                            <div><strong>Number:</strong><input class="ml-2 disabled:bg-white" value="@company.ContactNumber" disabled/></div>
-                        }
-                        else
-                        {
-                            var applicant = Model.Applicant;
-                            var educationalDetails = applicant.EducationalDetail;
-                            <div><strong>Id Number:</strong><span class="ml-2" />@educationalDetails.IdNumber</div>
-                            <div><strong>College:</strong><span class="ml-2" />@educationalDetails.College.Name</div>
-                            <div><strong>Department:</strong><span class="ml-2" />@educationalDetails.Department.Name</div>
-                            <div><strong>Program:</strong><span class="ml-2" />@educationalDetails.Program.Name</div>
-                            <div><strong>Year Level:</strong><span class="ml-2" />@educationalDetails.YearLevel.Name</div>
-                        }
-                    </div>
-                </div>
+                @await Html.PartialAsync("_ProfileSection", Model)
 
                 <!-- SECTION: Skills & Resume -->
-                <div id="skills-resume-section" class="tab-content hidden">
-                    <form id="skills-resume-form">
-                        <div class="mb-4 flex items-center justify-between">
-                            <h2 class="mb-4 text-2xl font-semibold">Skills</h2>
-                            <div class="flex space-x-2">
-                                <button type="button" id="cancel-preferences-btn" class="hidden rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]">
-                                    Cancel
-                                </button>
-                                <button type="button" id="save-preferences-btn" class="hidden rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
-                                    Update
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class="mb-4 space-y-2">
-                            <!-- Cultural Skills -->
-                            <div class="flex-1">
-                                <label class="block text-sm font-medium text-gray-700">Cultural/Soft Skills</label>
-                                <input placeholder="Open Mindset, Communication, Leadership" type="text" id="createJobSkillsSInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
-                                <div type="hidden" id="skillsSHiddenInputs" name="SkillsS"></div>
-                                <span class="text-sm text-red-500" id="skillsSValidation"></span>
-                            </div>
-                            <!-- Technical Skills -->
-                            <div class="flex-1">
-                                <label class="block text-sm font-medium text-gray-700">Technical Skills</label>
-                                <input placeholder="C# (Programming Language), ASP.NET" type="text" id="createJobSkillsTInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
-                                <div type="hidden" id="skillsTHiddenInputs" name="SkillsT"></div>
-                                <span  class="text-sm text-red-500" id="skillsTValidation"></span>
-                            </div>
-                            <!-- Certification Skills -->
-                            <div class="flex-1">
-                                <label class="block text-sm font-medium text-gray-700">Certifications</label>
-                                <input placeholder="Microsoft Azure Certification, CompTIA CASP+ CE" type="text" id="createJobSkillsCInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
-                                <div type="hidden" id="skillsCHiddenInputs" name="SkillsC"></div>
-                                <span class="text-sm text-red-500" id="skillsCValidation"></span>
-                            </div>
-                        </div>
-                        <hr />
-                        <div>resume here</div>
-                    </form>
-                </div>
+                @await Html.PartialAsync("_QualificationsSection")
 
                 <!-- SECTION: Preferences -->
-                <div id="preferences-section" class="tab-content hidden">
-                    <form id="preferences-form">
-                        <div class="mb-4 flex items-center justify-between">
-                            <h2 class="mb-4 text-2xl font-semibold">Preferences</h2>
-                            <div class="flex space-x-2">
-                                <button type="button" id="cancel-preferences-btn" class="hidden rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]">
-                                    Cancel
-                                </button>
-                                <button type="button" id="save-preferences-btn" class="hidden rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
-                                    Update
-                                </button>
-                            </div>
-                        </div>
-
-                        <!-- Notification Preferences -->
-                        <div class="mb-4">
-                            <button type="button" class="toggle-preferences flex w-full items-center justify-between rounded-md bg-gray-100 px-4 py-2 focus:outline-none" data-target="#notification-preferences-content" data-icon="#notification-icon">
-                                <span class="text-xl font-medium">Notifications</span>
-                                <svg id="notification-icon" class="h-6 w-6 transition-transform duration-200" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                                </svg>
-                            </button>
-
-                            <div id="notification-preferences-content" class="mt-1 hidden rounded-md border border-gray-200 bg-gray-50 p-4">
-                                @await Html.PartialAsync("_NotificationPreferences", Model)
-                            </div>
-                        </div>
-
-                        <!-- Filter and Sort Preferences -->
-                        <div class="mb-4">
-                            <button type="button" class="toggle-preferences flex w-full items-center justify-between rounded-md bg-gray-100 px-4 py-2 focus:outline-none" data-target="#filterandsort-preferences-content" data-icon="#filterandsort-icon">
-                                <span class="text-xl font-medium">Filter and Sort</span>
-                                <svg id="filterandsort-icon" class="h-6 w-6 transition-transform duration-200" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                                </svg>
-                            </button>
-
-                            <div id="filterandsort-preferences-content" class="mt-1 hidden rounded-md border border-gray-200 bg-gray-50 p-4">
-                                @await Html.PartialAsync("_NotificationPreferences", Model)
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                @await Html.PartialAsync("_PreferencesSection", Model)
 
                 <!-- SECTION: Password -->
-                <div id="password-section" class="tab-content hidden">
-                    <div class="mb-4 flex items-center justify-between">
-                        <h2 class="mb-4 text-2xl font-semibold">Change Password</h2>
-                        <div class="flex space-x-2">
-                            <button type="button" id="cancel-password-btn" class="hidden rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]">
-                                Cancel
-                            </button>
-                            <button type="button" id="save-password-btn" class="hidden rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
-                                Update
-                            </button>
-                        </div>
-                    </div>
-                    <form id="password-form">
-                        <div class="mb-4">
-                            <label for="oldPassword" class="mb-2 block text-gray-700">Old Password</label>
-                            <input 
-                                type="password" 
-                                class="w-full rounded-md border border-gray-300 p-2 pr-10 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" 
-                                id="oldPassword" 
-                                name="OldPassword" />
-                            <span id="old-password-validation-message" class="hidden text-sm text-red-600"></span>
-                        </div>
-                        <div class="mb-4">
-                            <label for="newPassword" class="mb-2 block text-gray-700">New Password</label>
-                            <input 
-                                type="password" 
-                                class="w-full rounded-md border border-gray-300 p-2 pr-10 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" 
-                                id="newPassword" 
-                                name="NewPassword" />
-                            <span id="new-password-validation-message" class="hidden text-sm text-red-600"></span>
-                        </div>
-                        <div class="mb-4">
-                            <label for="confirmNewPassword" class="mb-2 block text-gray-700">Confirm New Password</label>
-                            <input 
-                                type="password" 
-                                class="w-full rounded-md border border-gray-300 p-2 pr-10 hover:border-[#7A1515] focus:outline-none focus:ring-2 focus:ring-[#991b1b] focus:border-transparent" 
-                                id="confirmNewPassword" 
-                                name="ConfirmNewPassword" />
-                            <span id="confirm-password-validation-message" class="hidden text-sm text-red-600"></span>
-                        </div>
-                    </form>
-                </div>
+                @await Html.PartialAsync("_PasswordSection")
             </div>
         </div>
     </div>
