Modify registration modal

--- a/WebApp/Views/Account/_RegisterModal.cshtml
+++ b/WebApp/Views/Account/_RegisterModal.cshtml
@@ -22,7 +22,7 @@
 
                     <div class="mb-4">
                         <label class="mb-1 block font-semibold text-[#343131]" for="email">Email Address <span class="text-[#A04747]">*</span></label>
-                        <input type="text" id="email" asp-for="Email" placeholder="juandelacruz@gradsync.com"
+                        <input type="text" id="email" asp-for="Email" placeholder="juan.cruz@cit.edu"
                                class="w-full rounded-md border border-gray-300 p-2 hover:border-[#A04747] focus:outline-none focus:ring-2 focus:ring-[#A04747]" />
                         <span asp-validation-for="Email" class="mt-1 block text-sm text-red-500"></span>
                         <p class="text-xs font-normal text-[#A04747]">Please use your institution/company email address.</p>
@@ -46,7 +46,7 @@
                     <div class="mb-4 flex space-x-4">
                         <div class="w-1/2">
                             <label class="mb-1 block font-semibold text-[#343131]" for="lastName">Last Name <span class="text-[#A04747]">*</span></label>
-                            <input type="text" id="lastName" asp-for="LastName" placeholder="Dela Cruz"
+                            <input type="text" id="lastName" asp-for="LastName" placeholder="Cruz"
                                    class="w-full rounded-md border border-gray-300 p-2 hover:border-[#991b1b] focus:outline-none focus:ring-2 focus:ring-[#991b1b]" />
                             <span asp-validation-for="LastName" class="mt-1 block text-sm text-red-500"></span>
                         </div>
